# FastMCP_uavTools

./: .dockerignore  .env_example  .gitignore  DOCKER_BUILD.md  Dockerfile  README.md  api_server.py  config_manager.py  config_manager_docker.py  docker-entrypoint.sh  pyproject.toml  start.bat  start.sh
configs/: config.default.yaml  config.yaml
src/: __init__.py  clip_milvus_searcher.py  img_cropper.py  img_predictor.py  mae_milvus_searcher.py  mae_search_image.py  mae_search_target_imgs.py  plan_uav_route.py  plan_uav_route_v1.py  search_history_imgs.py  search_target_imgs.py  target_label_analyzer.py
utils/: RS_images_process.py  analyze_route.py  clip_embedding_history_milvus.py  clip_embedding_target_milvus.py  mae_embed_history_milvus.py  mae_embed_target_milvus.py  mae_embedding_basic.py  mcp_local_shipinfo_search_tool.py  milvus_utils.py  mysql_utils.py  rs_image_utils.py  shipinfo_utils.py
